// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="sc-fjdhpX klxvDw"
  >
    <div
      class="sc-jzJRlG gUJRuR"
    >
      <div
        class="sc-cSHVUG comvYc"
      >
        <div
          class="sc-kGXeez kYBuEU"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-hMqMXs cPxEnv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kAzzGY jHprQs"
      >
        <div
          class="sc-cSHVUG comvYc"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kAzzGY jHprQs"
        >
          <pre
            class="sc-iAyFgw feiSgj"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-kkGfuU gqJIVH"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="sc-fjdhpX klxvDw"
  >
    <div
      class="sc-jzJRlG gUJRuR"
    >
      <div
        class="sc-cSHVUG comvYc"
      >
        <div
          class="sc-kGXeez kYBuEU"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-hMqMXs cPxEnv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kAzzGY jHprQs"
      >
        <div
          class="sc-cSHVUG comvYc"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kAzzGY jHprQs"
        >
          <pre
            class="sc-iAyFgw feiSgj"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-kkGfuU gqJIVH"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-jzJRlG gUJRuR"
    >
      <div
        class="sc-cSHVUG comvYc"
      >
        <div
          class="sc-kGXeez kYBuEU"
        >
          WARNING yy0
        </div>
        <h4
          class="sc-hMqMXs cPxEnv"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-kAzzGY jHprQs"
      >
        <div
          class="sc-cSHVUG comvYc"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-kAzzGY jHprQs"
        >
          <pre
            class="sc-iAyFgw feiSgj"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-kkGfuU gqJIVH"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
